--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
     "postinstall": "npx simple-git-hooks"
   },
   "dependencies": {
+    "@primevue/themes": "^4.2.2",
     "@vueuse/core": "^11.0.3",
+    "primeicons": "^7.0.0",
+    "primevue": "^4.2.2",
     "vue": "^3.5.3",
     "vue-router": "^4.4.3"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^3.4.0",
     "@iconify-json/carbon": "^1.2.1",
+    "@primevue/auto-import-resolver": "^4.2.2",
     "@types/node": "^22.5.4",
     "@vitejs/plugin-vue": "^5.1.3",
     "@vue-macros/volar": "^0.28.1",
