--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@primevue/themes": "^4.2.2",
     "@vueuse/core": "^11.0.3",
+    "axios": "^1.7.7",
     "primeicons": "^7.0.0",
     "primevue": "^4.2.2",
     "vue": "^3.5.3",
