--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@primevue/themes": "^4.2.2",
     "@vueuse/core": "^11.0.3",
     "axios": "^1.7.7",
+    "pinia": "^2.3.0",
     "primeicons": "^7.0.0",
     "primevue": "^4.2.2",
+    "vee-validate": "^4.15.0",
     "vue": "^3.5.3",
-    "vue-router": "^4.4.3"
+    "vue-router": "^4.4.3",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^3.4.0",
