--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@primevue/themes": "^4.2.2",
     "@vueuse/core": "^11.0.3",
     "axios": "^1.7.7",
+    "date-fns": "^4.1.0",
     "pinia": "^2.3.0",
     "primeicons": "^7.0.0",
     "primevue": "^4.2.2",
