--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "@primevue/themes": "^4.2.2",
     "@vueuse/core": "^11.0.3",
+    "@vueuse/integrations": "^12.5.0",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.7",
     "date-fns": "^4.1.0",
     "pinia": "^2.3.0",
     "primeicons": "^7.0.0",
